k8s/apps/guestbook/db-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: staging  
spec: 
  serviceName: postgres-service
  replicas: 1
  selector:
    matchLabels:
      app: db
  
  template: 
    metadata: 
      name: postgres
      labels: 
        app: db
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
              name: postgres 

          volumeMounts:
            - name: postgres-persistent-storage
              mountPath: /var/lib/postgresql/data    
    

  volumeClaimTemplate:
  - metadata:
       name: ebs-postgres-pv-claim
       namespace: staging
    spec:
      accessModes:
        -ReadWriteOnce
      # storageClassName: ebs-sc  "" for default storage
      resources:
        requests:
          storage: 4Gi
