k8s/apps/guestbook/db-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: postgres-service
  namespace: staging  
spec:
  selector:
    app: db 
  ports: 
    - port: 5432  
  clusterIP: None
