k8s/apps/guestbook/guestbook-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
  namespace: staging  
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: guestbook-ui
